# cnv-epic-agent

./: .gitignore  README.md  config.yaml  mcp.json.example  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-feedback.yml
agent/: cli.py  runner.py
agent/analyzer/: analysis.py  formatter.py
agent/discovery/: discover.py
agent/export/: gsheet_report.py  html_report.py  xlsx_report.py
agent/jira/: client.py
agent/planner/: llm.py  planner.py
mcp/: server.py
mcp/github/: discover.py  tools.py
mcp/jira/: client.py  tools.py
mcp/tools/: config.py
mcpserver/: server.py
mcpserver/github/: tools.py
mcpserver/jira/: client.py  tools.py
mcpserver/tools/: config.py
prompts/: templates.py
schemas/: config.py  issue_doc.py  stories.py
tests/: test_analysis.py  test_discover.py  test_gsheet_report.py  test_html_report.py  test_jira_client.py  test_planner.py  test_prompts.py  test_runner.py  test_schemas.py  test_xlsx_report.py
tests/fixtures/: sample_epic.json  sample_epic_docs_only.json  sample_stories.json  sample_stories_docs_only.json
tests/fixtures/fake_repo/docs/: metrics.md
tests/fixtures/fake_repo/docs/runbooks/: CDIOperatorDown.md  KubeVirtVMIExcessiveMigrations.md  OWNERS
tests/fixtures/fake_repo/internal/perses/dashboards/: vm_dashboard.go
tests/fixtures/fake_repo/manifests/: prometheus-rule.yaml
tests/fixtures/fake_repo/manifests/cmo/: 0000_50_cluster-monitoring-operator_04-config.yaml
tests/fixtures/fake_repo/pkg/monitoring/metrics/: operator_metrics.go
tests/fixtures/fake_repo_b/pkg/monitoring/metrics/: cdi_metrics.go
(+7 files in other folders)
