[project]
name = "cnv-epic-agent"
version = "0.1.0"
description = "CNV Epic grooming agent — scan epics, identify gaps, create stories"
requires-python = ">=3.11"
dependencies = [
    "jira>=3.8",
    "litellm>=1.40",
    "mistune>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cnv-epic-agent = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "prompts", "schemas"]
artifacts = ["config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
